# entra-docker-sync

./: README.md  setup.cfg
config/: settings.yaml
entra_docker_sync/: auth.py  docker_manager.py  graph_api.py  main.py  report_generator.py  state_manager.py
