[metadata]
name = entra-docker-sync
version = 0.1.0
author = DevOps Team
author_email = devops@example.com
description = Provisions Docker containers on Linux hosts based on Entra ID group memberships
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/entra-docker-sync
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.28.0
    msal>=1.20.0
    docker>=6.0.0
    python-terraform>=0.10.1
    pyyaml>=6.0
    python-dotenv>=1.0.0

[options.entry_points]
console_scripts =
    entra-docker-sync = entra_docker_sync.main:main

[options.extras_require]
dev =
    pytest>=7.2.0
    pytest-mock>=3.10.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
